Made the thing even smaller. Also updated version. Updated README. Modified tests.

--- a/test/index.html
+++ b/test/index.html
@@ -71,5 +71,5 @@
 			</picture>
 		</noscript>
 	</body>
-	<script src="../dist/yall.js"></script>
+	<script src="../dist/yall.js" defer></script>
 </html>
