--- a/test/index.html
+++ b/test/index.html
@@ -71,5 +71,5 @@
 			</picture>
 		</noscript>
 	</body>
-	<script src="../dist/yall.js" defer></script>
+	<script src="../dist/yall-1.0.3.js" defer></script>
 </html>
