Some further tweaks/fixes.

--- a/test/iframe.html
+++ b/test/iframe.html
@@ -12,8 +12,12 @@
         padding: 0;
       }
 
-      body{
-        background: #639;
+      body {
+        background: rebeccapurple;
+        color: #fff;
+        padding: 1rem;
+        font-family: sans-serif;
+        text-align: center;
       }
     </style>
   </head>
