reduce & improve... replace Babel + Uglify -> Rollup + Buble + Terser remove Travis remove ESLint remove version from filename use dist builds in test/index.html auto-stamp version from package.json into banner remove http.js, just use file:/// for testing remove spread to avoid need for Object.assign transpiling add lib name and version identifier to dist builds

--- a/test/index.html
+++ b/test/index.html
@@ -166,7 +166,7 @@
         <div class="css-bg-example lazy-bg"></div>
       </div>
     </div>
-    <script src="js/yall.min.js"></script>
+    <script src="../dist/yall.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         yall({
